# myChat

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  choosefrienddialog.cpp  choosefrienddialog.h  debug.h  framelesswidget.cpp  framelesswidget.h  groupsessiondetailwidget.cpp  groupsessiondetailwidget.h  local_resource.qrc  loginwidget.cpp  loginwidget.h  main.cpp  mainwidget.cpp  mainwidget.h  messageeditarea.cpp  messageeditarea.h  messagehistorywidget.cpp  messagehistorywidget.h  messageshowarea.cpp  messageshowarea.h  otherusrinfowidget.cpp  otherusrinfowidget.h  searchaddfriend.cpp  searchaddfriend.h  searchaddfriend.ui  sessiondetailswidget.cpp  sessiondetailswidget.h  sessionfriendarea.cpp  sessionfriendarea.h  soundrecorder.cpp  soundrecorder.h  toast.cpp  toast.h  usrinfowidget.cpp  usrinfowidget.h  verifycodewidget.cpp  verifycodewidget.h  (+1 more)
model/: data.h  datacenter.cpp  datacenter.h
network/: netclient.cpp  netclient.h
note/: 实现qt 窗口无边框拖拽.md
proto/: base.proto  chatSessionInfo.proto  file.proto  friend.proto  message.proto  notify.proto  speech.proto  test.proto  transmit.proto  user.proto  userInfo.proto  webSocket.proto
